tests/config/manifests/kubernetes-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynatrace
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
  name: dynatrace-webhook
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /inject
    failurePolicy: Ignore
    name: webhook.pod.dynatrace.com
    namespaceSelector:
      matchExpressions:
        - key: dynakube.internal.dynatrace.com/instance
          operator: Exists
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 2
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /label-ns
    failurePolicy: Ignore
    name: webhook.ns.dynatrace.com
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
        scope: Cluster
    sideEffects: None
    timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
  name: dynatrace-webhook
  namespace: dynatrace
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: server-port
  selector:
    internal.dynatrace.com/app: webhook
    internal.dynatrace.com/component: webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    dynatrace: operator
    operator: dynakube
  name: dynatrace-operator
  namespace: dynatrace
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: dynatrace-operator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        dynatrace: operator
        name: dynatrace-operator
        operator: dynakube
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - args:
            - operator
          image: quay.io/dynatrace/dynatrace-operator:snapshot-feature-statsd-ingest--edge
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          name: dynatrace-operator
          ports:
            - containerPort: 8080
              name: metrics
            - containerPort: 10080
              name: server-port
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      serviceAccountName: dynatrace-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
  name: dynatrace-webhook
  namespace: dynatrace
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      internal.dynatrace.com/app: webhook
      internal.dynatrace.com/component: webhook
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: webhook
      labels:
        dynatrace.com/operator: oneagent
        internal.dynatrace.com/app: webhook
        internal.dynatrace.com/component: webhook
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - args:
            - webhook-server
          image: quay.io/dynatrace/dynatrace-operator:snapshot-feature-statsd-ingest--edge
          imagePullPolicy: Always
          name: webhook
          ports:
            - containerPort: 8383
              name: metrics
            - containerPort: 8384
              name: validation
            - containerPort: 8443
              name: server-port
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTPS
          resources:
            limits:
              cpu: 300m
              memory: 128Mi
            requests:
              cpu: 300m
              memory: 128Mi
      serviceAccountName: dynatrace-webhook
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    dynatrace: operator
    operator: dynakube
  name: dynatrace-oneagent-csi-driver
  namespace: dynatrace
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      internal.oneagent.dynatrace.com/app: csi-driver
      internal.oneagent.dynatrace.com/component: csi-driver
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-logs-container: driver
      labels:
        dynatrace: operator
        internal.oneagent.dynatrace.com/app: csi-driver
        internal.oneagent.dynatrace.com/component: csi-driver
        operator: dynakube
    spec:
      containers:
        - args:
            - csi-driver
            - --endpoint=unix://csi/csi.sock
            - --node-id=$(KUBE_NODE_NAME)
            - --health-probe-bind-address=:10080
          image: quay.io/dynatrace/dynatrace-operator:snapshot-feature-statsd-ingest--edge
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: healthz
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          name: driver
          ports:
            - containerPort: 10080
              name: healthz
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 100Mi
            requests:
              cpu: 300m
              memory: 100Mi
          securityContext:
            privileged: true
            runAsUser: 0
            seLinuxOptions:
              level: s0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /csi
              name: plugin-dir
            - mountPath: /var/lib/kubelet/plugins
              mountPropagation: Bidirectional
              name: plugins-dir
            - mountPath: /var/lib/kubelet/pods
              mountPropagation: Bidirectional
              name: mountpoint-dir
            - mountPath: /data
              mountPropagation: Bidirectional
              name: dynatrace-oneagent-data-dir
        - args:
            - --csi-address=/csi/csi.sock
            - --kubelet-registration-path=/var/lib/kubelet/plugins/csi.oneagent.dynatrace.com/csi.sock
            - --health-port=9809
          command:
            - csi-node-driver-registrar
          image: quay.io/dynatrace/dynatrace-operator:snapshot-feature-statsd-ingest--edge
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: healthz
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: registrar
          ports:
            - containerPort: 9809
              name: healthz
              protocol: TCP
          resources:
            limits:
              cpu: 10m
              memory: 18M
            requests:
              cpu: 10m
              memory: 18M
          securityContext:
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /csi
              name: plugin-dir
            - mountPath: /registration
              name: registration-dir
        - args:
            - --csi-address=/csi/csi.sock
            - --health-port=9898
          command:
            - livenessprobe
          image: quay.io/dynatrace/dynatrace-operator:snapshot-feature-statsd-ingest--edge
          imagePullPolicy: Always
          name: liveness-probe
          resources:
            limits:
              cpu: 5m
              memory: 18M
            requests:
              cpu: 5m
              memory: 18M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /csi
              name: plugin-dir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: dynatrace-oneagent-csi-driver
      serviceAccountName: dynatrace-oneagent-csi-driver
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
          name: registration-dir
        - hostPath:
            path: /var/lib/kubelet/plugins/csi.oneagent.dynatrace.com
            type: DirectoryOrCreate
          name: plugin-dir
        - hostPath:
            path: /var/lib/kubelet/plugins
            type: Directory
          name: plugins-dir
        - hostPath:
            path: /var/lib/kubelet/pods
            type: DirectoryOrCreate
          name: mountpoint-dir
        - hostPath:
            path: /var/lib/kubelet/plugins/csi.oneagent.dynatrace.com/data
            type: DirectoryOrCreate
          name: dynatrace-oneagent-data-dir
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
  name: dynatrace-webhook
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
      - v1alpha1
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /validate
    name: webhook.dynatrace.com
    rules:
      - apiGroups:
          - dynatrace.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dynakubes
    sideEffects: None
    timeoutSeconds: 2
